Fixed issue with project height when viewing on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2581,7 +2581,7 @@ html, body {
 canvas {
 	display: block;
 	width: 100% !important;
-	height: 800px !important;
+	height: 100% !important;
 }
 button-row {
 	display: block;
